fix footer, add border to footer, fix code text spacing in about

--- a/assets/css/nycaasc-custom.css
+++ b/assets/css/nycaasc-custom.css
@@ -183,6 +183,7 @@
   height: 60px;*/
   background-color: #f5f5f5;
   border-top-width: 1px;
+  border-top-style: solid;
   padding-bottom: 20px;
 }
 #foot>div {
